schema/testdata/validation_message_input_with_normal_custom_fn/schema.keel
message Foo {
  bar Text
}

model Person {
  functions {
    create createPerson() with(Foo)
  }
}